--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,7 @@
 logo: /images/logo.jpg
 links:
-  - title: Contact Us
-    url: /contact-us/
-  - title: Example Page
-    url: /example-page/
+  - title: Alumni
+    url: https://fairfieldalumni.org.sg/
+    sublinks:
+      - title: Alumni Link
+        url: https://fairfieldalumni.org.sg/
