--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Staff Directory/.keep
       - Departments.md
       - CCA Achievements.md
       - Fairfield Performing Arts Studio.md
