--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Staff Directory/School Leaders.md
       - Staff Directory/School Managers.md
       - Staff Directory/Heads of Department.md
       - Staff Directory/Teaching Staff.md
