--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Staff Directory/Board of Management.md
       - Staff Directory/.keep
       - Staff Directory/Staff Directory.md
       - Staff Directory/School Leaders.md
