--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 logo: /images/logo.jpg
 links:
+  - title: About Us
+    collection: about-us
   - title: Alumni
     url: https://fairfieldalumni.org.sg/
     sublinks:
