--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,29 @@ logo: /images/logo.jpg
 links:
   - title: About Us
     collection: about-us
+  - title: Staff
+    url: /staff
+    sublinks:
+      - title: ICT Guides
+        url: https://drive.google.com/drive/folders/14XeT8YOKWG7XE32tZXPu8W9ppnYs9FXG
+      - title: MOE iCon
+        url: https://workspace.google.com/dashboard
+      - title: MOE Intranet
+        url: https://intranet.moe.gov.sg/
+      - title: MOE SC Mobile
+        url: https://scmobile.moe.edu.sg/login
+      - title: MOE School Cockpit Plus
+        url: https://schoolcockpit.moe.gov.sg/
+      - title: MOE Resource Booking Service
+        url: https://rbs.avero-tech.com/
+      - title: MOE Parents Gateway
+        url: https://pg.moe.edu.sg/
+      - title: MOE Student Learning Space
+        url: https://vle.learning.moe.edu.sg/login
+      - title: MOE MIMS
+        url: https://idp.mims.moe.gov.sg/nidp/saml2/sso
+      - title: HRP
+        url: https://www.hrp.gov.sg/hrp/#/
   - title: Alumni
     url: https://fairfieldalumni.org.sg/
     sublinks:
