--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,5 +2,6 @@ collections:
   students:
     output: true
     order:
+      - School Rules.md
       - Student Learning Space.md
       - Useful Links.md
