--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,5 +2,6 @@ collections:
   parents:
     output: true
     order:
+      - Vendors & Services.md
       - English Reading List.md
       - MOE Guidelines for School–Home Partnership.md
