--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - Student Care Centre at FMS(P).md
       - Parents Info.md
       - Vendors & Services.md
       - English Reading List.md
