--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Board of Management.md
       - Staff Directory/School Information.md
       - Staff Directory/Principal's Message.md
       - Staff Directory/.keep
