--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - CCA (NEW)/Uniformed Groups.md
       - CCA (NEW)/CCA Modules.md
       - CCA (NEW)/CCA (NEW).md
       - CCA (NEW)/.keep
