--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - PE & PAL & CCA.md
       - CCA (NEW)/.keep
       - CCA (NEW)/CCA (NEW).md
       - CCA (NEW)/School Teams.md
