--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - CCE/Student Curriculum.md
       - CCE/Student Engagement.md
       - CCE/Student Leadership.md
       - CCE/Growing Years Series.md
