--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Aesthetics/Aesthetics.md
       - Aesthetics/.keep
       - CCE/.keep
       - CCE/CCE.md
