--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Mother Tongue/Mother Tongue.md
       - Mother Tongue/.keep
       - ICT Department.md
       - Aesthetics/Visual Performing Arts CCA.md
