--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -5,6 +5,7 @@ collections:
       - English Language.md
       - Mathematics.md
       - Science.md
+      - Mother Tongue/Chinese.md
       - Mother Tongue/Malay.md
       - Mother Tongue/Tamil.md
       - Mother Tongue/Mother Tongue.md
