--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -11,6 +11,7 @@ collections:
       - Mother Tongue/Malay.md
       - Mother Tongue/Tamil.md
       - ICT Department.md
+      - Aesthetics/Learning For Life Programme (LLP).md
       - Aesthetics/Art.md
       - Aesthetics/Music.md
       - Aesthetics/Visual Performing Arts CCA.md
