--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Fairfield Methodist Primary School
 url: https://fmsp.moe.edu.sg
 favicon: /images/logo.jpg
 colors:
-  primary-color: "#f8f244"
+  primary-color: "#e7da3d"
   secondary-color: "#002d87"
   media-colors:
     - title: media-color-one
