--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Fairfield Methodist Primary School
+title: Fairfield Methodist School (Primary)
 url: https://fmsp.moe.edu.sg
 favicon: /images/logo.jpg
 colors:
