--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -22,7 +22,7 @@ collections:
       - CCE/Growing Years Series.md
       - PE.md
       - CCA (NEW)/.keep
-      - CCA (NEW)/CCA (NEW).md
+      - CCA (NEW)/CCA.md
       - CCA (NEW)/School Teams.md
       - CCA (NEW)/Aesthetics.md
       - CCA (NEW)/Sports.md
