--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -21,6 +21,7 @@ collections:
       - CCE/CCE.md
       - CCE/Growing Years Series.md
       - PE.md
+      - CCA (NEW)/Clubs and Societies.md
       - CCA (NEW)/.keep
       - CCA (NEW)/CCA.md
       - CCA (NEW)/School Teams.md
