--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -21,11 +21,11 @@ collections:
       - CCE/CCE.md
       - CCE/Growing Years Series.md
       - PE.md
-      - CCA (NEW)/.keep
-      - CCA (NEW)/CCA.md
-      - CCA (NEW)/School Teams.md
-      - CCA (NEW)/Aesthetics.md
-      - CCA (NEW)/Sports.md
-      - CCA (NEW)/Uniformed Groups.md
-      - CCA (NEW)/CCA Modules.md
-      - CCA (NEW)/Clubs and Societies.md
+      - CCA/.keep
+      - CCA/CCA.md
+      - CCA/School Teams.md
+      - CCA/Aesthetics.md
+      - CCA/Sports.md
+      - CCA/Uniformed Groups.md
+      - CCA/CCA Modules.md
+      - CCA/Clubs and Societies.md
