--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Departments v2/Example Title.md
       - Departments v2/.keep
       - School Information.md
       - Principal's Message.md
