--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,7 +2,7 @@ collections:
   about-us:
     output: true
     order:
-      - Departments v2/Example Title.md
+      - Departments v2/Test Page 1.md
       - Departments v2/.keep
       - School Information.md
       - Principal's Message.md
