--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,8 +2,8 @@ collections:
   about-us:
     output: true
     order:
-      - Departments v2/English Language.md
-      - Departments v2/.keep
+      - Departments/English Language.md
+      - Departments/.keep
       - School Information.md
       - Principal's Message.md
       - Board of Management.md
