--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -13,6 +13,7 @@ collections:
       - Staff Directory/Teaching Staff.md
       - Staff Directory/Learning Support Staff.md
       - Staff Directory/Executive & Administrative Staff.md
+      - Departments/English Language.md
       - Departments/.keep
       - Departments/Mathematics.md
       - Departmentsold.md
