--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -17,7 +17,7 @@ collections:
       - Departments/English Language.md
       - Departments/Mathematics.md
       - Departments/Science.md
-      - Departments/Chinese.md
+      - Departments/Chinese Language.md
       - Departments/Malay.md
       - Departments/Tamil.md
       - Departmentsold.md
