--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -18,7 +18,7 @@ collections:
       - Departments/Mathematics.md
       - Departments/Science.md
       - Departments/Chinese Language.md
-      - Departments/Malay.md
+      - Departments/Malay Language.md
       - Departments/Tamil.md
       - Departmentsold.md
       - CCA Achievements.md
