--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -19,7 +19,7 @@ collections:
       - Departments/Science.md
       - Departments/Chinese Language.md
       - Departments/Malay Language.md
-      - Departments/Tamil.md
+      - Departments/Tamil Language.md
       - Departmentsold.md
       - CCA Achievements.md
       - Fairfield Performing Arts Studio.md
