--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -5,6 +5,7 @@ collections:
       - Science.md
       - Mathematics.md
       - English Language.md
+      - Mother Tongue OLD/Tamil Language.md
       - Mother Tongue OLD/Malay Language.md
       - Mother Tongue OLD/Chinese Language.md
       - Mother Tongue OLD/.keep
