--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -5,11 +5,11 @@ collections:
       - Science.md
       - Mathematics.md
       - English Language.md
-      - Mother Tongue OLD/.keep
-      - Mother Tongue OLD/Mother Tongue.md
-      - Mother Tongue OLD/Chinese Language.md
-      - Mother Tongue OLD/Malay Language.md
-      - Mother Tongue OLD/Tamil Language.md
+      - Mother Tongue/.keep
+      - Mother Tongue/Mother Tongue.md
+      - Mother Tongue/Chinese Language.md
+      - Mother Tongue/Malay Language.md
+      - Mother Tongue/Tamil Language.md
       - ICT Department.md
       - Aesthetics/.keep
       - Aesthetics/Aesthetics.md
