--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -14,7 +14,7 @@ collections:
       - Staff Directory/Teaching Staff.md
       - Staff Directory/Learning Support Staff.md
       - Staff Directory/Executive & Administrative Staff.md
-      - Departmentsold.md
+      - Departments.md
       - CCA Achievements.md
       - Fairfield Performing Arts Studio.md
       - Contact Us.md
