{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"717"}

--- a/_pie/collection.yml
+++ b/_pie/collection.yml
@@ -2,6 +2,7 @@ collections:
   pie:
     output: true
     order:
+      - Events in 2022.md
       - PiE.md
       - About Us.md
       - Events in 2021.md
