--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -53,3 +53,18 @@ links:
     sublinks:
       - title: Alumni Link
         url: https://fairfieldalumni.org.sg/
+  - title: "PARENTS "
+    url: /parents
+    sublinks:
+      - title: "Calendar "
+        url: /calendar
+      - title: "Updates On Covid 19 "
+        url: /permalink
+      - title: "Download Forms "
+        url: /permalink
+      - title: "Primary One Registration "
+        url: /permalink
+      - title: "Information on STEPS "
+        url: /permalink
+      - title: Guide to STEPS registration
+        url: https://www.moe.gov.sg/primary/transfers/
