--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -68,7 +68,9 @@ links:
         url: /permalink
       - title: Guide to STEPS registration
         url: https://www.moe.gov.sg/primary/transfers/
-      - title: "Foreign Student Admissions "
+      - title: Foreign Student Admissions
         url: /permalink
-      - title: Submenu Title
+      - title: Student Care Centre at FMS(P)
+        url: /permalink
+      - title: "Parents Info "
         url: /permalink
