--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -59,22 +59,22 @@ links:
       - title: Calendar
         url: /parents/calendar/
       - title: Updates On Covid 19
-        url: /permalink
+        url: /parents/updates-on-covid-19/
       - title: Download Forms
-        url: /permalink
+        url: /parents/download-forms/
       - title: Primary One Registration
-        url: /permalink
+        url: /parents/primary-one-registration/
       - title: Information on STEPS
-        url: /permalink
+        url: /parents/information-on-steps/
       - title: Guide to STEPS registration
         url: https://www.moe.gov.sg/primary/transfers/
       - title: Foreign Student Admissions
-        url: /permalink
+        url: /parents/international-student-admissions/
       - title: Student Care Centre at FMS(P)
-        url: /permalink
+        url: /parents/student-care-centre-at-fms-p/
       - title: Parents Info
+        url: /parents/parents-info/
+      - title: Vendors & Services
         url: /permalink
-      - title: "Vendors & Services "
-        url: /permalink
-      - title: "MOE Guidelines School - Home "
+      - title: MOE Guidelines School - Home
         url: /permalink
