--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -75,6 +75,8 @@ links:
       - title: Parents Info
         url: /parents/parents-info/
       - title: Vendors & Services
-        url: /permalink
+        url: /parents/vendors-n-services/
+      - title: "English Reading List "
+        url: /parents/english-reading-list/
       - title: MOE Guidelines School - Home
-        url: /permalink
+        url: /parents/moe-guidelines-for-school-home-partnership/
