--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -50,7 +50,7 @@ links:
         url: /parents/vendors-n-services/
       - title: English Reading List
         url: /parents/english-reading-list/
-      - title: MOE Guidelines School - Home
+      - title: School - Home MOE Guidelines
         url: /parents/moe-guidelines-for-school-home-partnership/
   - title: Students
     collection: students
