--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -59,6 +59,8 @@ links:
     sublinks:
       - title: About Us
         url: /pie/about-us
+      - title: Events in 2022
+        url: /pie/events-in-2022/
       - title: Events in 2021
         url: /pie/events-in-2021
       - title: Events in 2020
