{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1811"}

--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -6,7 +6,7 @@ collections:
       - Updates on COVID–19.md
       - Download Forms.md
       - Primary One Registration.md
-      - Guide to STEPS registrations.md
+      - Guide to Primary school transfer service.md
       - International Student Admissions.md
       - Student Care Centre at FMS(P).md
       - Parents Info.md
