--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -9,7 +9,7 @@ collections:
       - Staff Directory/Staff Directory.md
       - Staff Directory/School Leaders.md
       - Staff Directory/School Managers.md
-      - Staff Directory/Heads of Department.md
+      - Staff Directory/Management Team.md
       - Staff Directory/Teaching Staff.md
       - Staff Directory/Learning Support Staff.md
       - Staff Directory/Executive & Administrative Staff.md
