--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - Announcements.md
       - Calendar.md
       - Updates on COVID–19.md
       - Download Forms.md
