--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - School Bus Advertisement.md
       - School Information.md
       - Principal's Message.md
       - Board of Management.md
