{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1811"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -11,7 +11,7 @@ collections:
       - Staff Directory/School Managers.md
       - Staff Directory/Management Team.md
       - Staff Directory/Teaching Staff.md
-      - Staff Directory/Learning Support Staff.md
+      - Staff Directory/Allied Educators.md
       - Staff Directory/Executive & Administrative Staff.md
       - Departments.md
       - CCA Achievements.md
