{"message":"Update file: _config.yml","userId":"2444","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Fairfield Methodist School (Primary)
 url: https://fmsp.moe.edu.sg
 favicon: /images/logo.jpg
 colors:
-  primary-color: "#e7da3d"
+  primary-color: "#2d4091"
   secondary-color: "#002d87"
   media-colors:
     - title: media-color-one
