--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - NewsLink.md
       - Calendar.md
       - Download Forms.md
       - Announcements.md
