{"message":"Update file: navigation.yml","userId":"2444","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,8 +32,8 @@ links:
     sublinks:
       - title: Calendar
         url: /parents/calendar/
-      - title: Updates On Covid 19
-        url: /parents/updates-on-covid-19/
+      - title: NewsLink
+        url: /parents/newslink
       - title: Download Forms
         url: /parents/download-forms/
       - title: Primary One Registration
