{"message":"Update file: collection.yml","userId":"2444","fileName":"collection.yml"}

--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Calendar.md
       - NewsLink.md
       - Download Forms.md
-      - Announcements.md
+      - Announcement for Parents.md
       - Primary One Registration.md
       - Guide to Primary school transfer service.md
       - International Student Admissions.md
