--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -10,7 +10,7 @@ collections:
       - Mother Tongue/Chinese Language.md
       - Mother Tongue/Malay Language.md
       - Mother Tongue/Tamil Language.md
-      - ICT Department.md
+      - ICT Department 2.md
       - Aesthetics/.keep
       - Aesthetics/Aesthetics.md
       - Aesthetics/Learning For Life Programme (LLP).md
