--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - ICT/.keep
       - English Language.md
       - Mathematics.md
       - Science.md
