{"message":"Update file: collection.yml","userId":"2444","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -11,7 +11,7 @@ collections:
       - Mother Tongue/Malay Language.md
       - Mother Tongue/Tamil Language.md
       - ICT/.keep
-      - ICT/ICT Department 2.md
+      - ICT/ICT Department.md
       - Aesthetics/.keep
       - Aesthetics/Aesthetics.md
       - Aesthetics/Learning For Life Programme (LLP).md
