{"message":"Update file: collection.yml","userId":"2444","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -10,6 +10,7 @@ collections:
       - Mother Tongue/Chinese Language.md
       - Mother Tongue/Malay Language.md
       - Mother Tongue/Tamil Language.md
+      - ICT/Digital Literacy Programme.md
       - ICT/.keep
       - ICT/ICT Department.md
       - Aesthetics/.keep
