--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -57,10 +57,12 @@ links:
     sublinks:
       - title: About Us
         url: /pie/about-us
+      - title: Events in 2024
+        url: pie/events-in-2024/
+      - title: Events in 2023
+        url: /pie/events-in-2023/
       - title: Events in 2022
-        url: /pie/events-in-2022/
-      - title: Events in 2021
-        url: /pie/events-in-2021
+        url: /pie/events-in-2022
       - title: Events in 2020
         url: /pie/events-in-2020
       - title: Ongoing programmes
