{"message":"Update file: navigation.yml","userId":"2444","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -58,7 +58,7 @@ links:
       - title: About Us
         url: /pie/about-us
       - title: Events in 2024
-        url: pie/events-in-2024/
+        url: /pie/events-in-2024/
       - title: Events in 2023
         url: /pie/events-in-2023/
       - title: Events in 2022
