{"message":"Update file: navigation.yml","userId":"2444","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -70,7 +70,7 @@ links:
       - title: Family@Fairfield
         url: /pie/family-at-fairfield
       - title: Sign up for PiE
-        url: https://docs.google.com/forms/d/e/1FAIpQLSetWgMsYuLE2KEGjdb-cb4UYGO2Xe_Ng4DDMm99j1u_Y2UaiA/viewform
+        url: https://tinyurl.com/pie-eventsreg2024
   - title: Alumni
     url: https://fairfieldalumni.org.sg/
     sublinks:
