--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -5,6 +5,7 @@ collections:
       - School Information.md
       - Principal's Message.md
       - Board of Management.md
+      - Staff Directory/Teacher Leaders.md
       - Staff Directory/.keep
       - Staff Directory/School Leaders.md
       - Staff Directory/School Managers.md
