--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -70,7 +70,7 @@ links:
       - title: Family@Fairfield
         url: /pie/family-at-fairfield
       - title: Sign up for PiE
-        url: https://tinyurl.com/pie-eventsreg2024
+        url: https://tinyurl.com/pie-eventsReg2025
   - title: Alumni
     url: https://fairfieldalumni.org.sg/
     sublinks:
