--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - Student Learning Space (SLS)/.keep
       - Accounts.md
       - School Rules.md
       - Home–Based Learning.md
