{"message":"Update file: navigation.yml","userId":"2444","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -52,11 +52,13 @@ links:
         url: /parents/moe-guidelines-for-school-home-partnership/
   - title: Students
     collection: students
-  - title: Events in 2025
-    url: /pie/events-in-2025/
+  - title: PiE
+    url: /pie/
     sublinks:
       - title: About Us
         url: /pie/about-us
+      - title: Events in 2025
+        url: /pie/events-in-2025/
       - title: Events in 2024
         url: /pie/events-in-2024/
       - title: Events in 2023
@@ -69,8 +71,6 @@ links:
         url: /pie/family-at-fairfield
       - title: Sign up for PiE
         url: https://tinyurl.com/pie-eventsReg2025
-      - title: New submenu
-        url: /permalink
   - title: Alumni
     url: https://fairfieldalumni.org.sg/
     sublinks:
