{"message":"Update file: collection.yml","userId":"2444","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,7 +2,7 @@ collections:
   departments:
     output: true
     order:
-      - Ambassadors/.keep
+      - FRAP/.keep
       - English Language.md
       - Mathematics.md
       - Science.md
