{"message":"Update file: collection.yml","userId":"2444","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -31,5 +31,6 @@ collections:
       - CCA/Uniformed Groups.md
       - CCA/CCA Modules.md
       - CCA/Clubs and Societies.md
+      - FRAP/Writers.md
       - FRAP/.keep
       - FRAP/Ambassadors.md
