--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -20,7 +20,7 @@ collections:
       - Aesthetics/Music.md
       - Aesthetics/Visual Performing Arts CCA.md
       - CCE/.keep
-      - CCE/CCE.md
+      - CCE/CCE1.md
       - CCE/Growing Years Series.md
       - PE.md
       - CCA/.keep
