{"message":"Update file: collection.yml","userId":"2444","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -19,7 +19,7 @@ collections:
       - Aesthetics/Art.md
       - Aesthetics/Music.md
       - Aesthetics/Visual Performing Arts CCA.md
-      - CCE/MOE SEXUALITY EDUCATION.md
+      - CCE/MOE SEd.md
       - CCE/.keep
       - CCE/CCE1.md
       - CCE/Growing Years Series.md
