--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -21,7 +21,7 @@ collections:
       - Aesthetics/Visual Performing Arts CCA.md
       - CCE/MOE SEd.md
       - CCE/.keep
-      - CCE/CCE1.md
+      - CCE/CCE.md
       - CCE/Growing Years Series.md
       - PE.md
       - CCA/.keep
