{"message":"Update file: collection.yml","userId":"2444","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -25,7 +25,7 @@ collections:
       - PE.md
       - CCA/.keep
       - CCA/CCA.md
-      - CCA/Aesthetics.md
+      - CCA/Visual and Performing Arts.md
       - CCA/Sports.md
       - CCA/Uniformed Groups.md
       - CCA/CCA Modules.md
